--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 </head>
 <body>
 <header id="header" class="header">
-        <aside>
-            <h4>Hello There,</h4>
-            <h1 style="margin-top: -33px">I'm Sayani<span style="color: #da2843"> Nethmi</span> </h1>
-            <h6 style="margin-top: -33px">Full Stack Developer | Designer</h6>
-            <!--    <div class="back-arrow-container">-->
-            <!--        <a href="#" class="back-arrow">-->
-            <!--            <i class="bi bi-chevron-left"></i>-->
-            <!--        </a>-->
-            <!--        <a href="#" class="back-arrow">-->
-            <!--            <i class="bi bi-chevron-left"></i>-->
-            <!--        </a>-->
-            <!--    </div>-->
-        </aside>
+    <aside>
+        <h4>Hello There,</h4>
+        <h1 style="margin-top: -33px">I'm Sayani<span style="color: #da2843"> Nethmi</span></h1>
+        <h6 style="margin-top: -33px">Full Stack Developer | Designer</h6>
+        <!--    <div class="back-arrow-container">-->
+        <!--        <a href="#" class="back-arrow">-->
+        <!--            <i class="bi bi-chevron-left"></i>-->
+        <!--        </a>-->
+        <!--        <a href="#" class="back-arrow">-->
+        <!--            <i class="bi bi-chevron-left"></i>-->
+        <!--        </a>-->
+        <!--    </div>-->
+    </aside>
     <ul class="social-media">
         <li>
             <a href="" target="_blank" class="twitter">
@@ -47,9 +47,9 @@
             </a>
         </li>
     </ul>
-        <div class="intro-button-container">
-            <a href="#about" class="intro-button">MORE ABOUT ME<i class="fa-sharp fa-solid fa-angle-down"></i></a>
-        </div>
+    <div class="intro-button-container">
+        <a href="#about" class="intro-button">MORE ABOUT ME<i class="fa-sharp fa-solid fa-angle-down"></i></a>
+    </div>
 </header>
 <nav id="navbar" class="navbar">
     <ul>
@@ -70,7 +70,8 @@
         <div class="container">
             <div class="row">
                 <div class="section-title padd-15">
-                    <h2 style="color: white ;" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">ABOUT SAYANI</h2>
+                    <h2 style="color: white ;" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">ABOUT
+                        SAYANI</h2>
                 </div>
             </div>
             <div class="row">
@@ -162,13 +163,13 @@
                                         </div>
                                     </div>
                                 </div>
-<!--                                <div class="skill-item padd-15">-->
-<!--                                    <h5>Bootstrap 85%</h5>-->
-<!--                                    <div class="progress">-->
-<!--                                        <div class="progress-in" style="width: 85%;">-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
+                                <!--                                <div class="skill-item padd-15">-->
+                                <!--                                    <h5>Bootstrap 85%</h5>-->
+                                <!--                                    <div class="progress">-->
+                                <!--                                        <div class="progress-in" style="width: 85%;">-->
+                                <!--                                        </div>-->
+                                <!--                                    </div>-->
+                                <!--                                </div>-->
                                 <div class="skill-item padd-15">
                                     <h5>JAVA <small data-aos="zoom-in" data-aos-delay="200"
                                                     data-aos-duration="1600" class="small">80%</small></h5>
@@ -185,89 +186,102 @@
         </div>
     </section>
 
-<!--................Services................-->
+    <!--................Services................-->
     <section class="services" id="services">
         <div class="row">
-        <div class="heading">
-            <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">SERVICES</h2>
-        </div>
+            <div class="heading">
+                <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">
+                    SERVICES</h2>
+            </div>
         </div>
         <div class="services-content">
             <!--box-1-->
             <div data-aos="zoom-out" data-aos-delay="300" class="services-box">
                 <i class="bx bx-code-alt"></i>
                 <h3>Web Development</h3>
-                <p>Web designers plan, create and code internet sites and web pages, many of which combine text with sounds, pictures, graphics and video clips. A web designer is responsible for creating the design and layout of a website or web pages. It and can mean working on a brand new website or updating an already existing site.</p>
+                <p>Web designers plan, create and code internet sites and web pages, many of which combine text with
+                    sounds, pictures, graphics and video clips. A web designer is responsible for creating the design
+                    and layout of a website or web pages. It and can mean working on a brand new website or updating an
+                    already existing site.</p>
             </div>
             <!--box-2-->
             <div data-aos="zoom-out" data-aos-delay="300" class="services-box">
                 <i class="bx bx-server"></i>
                 <h3>App Development</h3>
-                <p>The application designer gathers requirements from business systems analysts and end users. The application programmer is responsible for developing and maintaining application programs. The tasks of designing an application and developing one are distinct enough to treat each in a separate learning module.</p>
+                <p>The application designer gathers requirements from business systems analysts and end users. The
+                    application programmer is responsible for developing and maintaining application programs. The tasks
+                    of designing an application and developing one are distinct enough to treat each in a separate
+                    learning module.</p>
             </div>
             <!--box-3-->
             <div data-aos="zoom-out" data-aos-delay="300" class="services-box">
                 <i class="bx bx-brush"></i>
                 <h3>UI/UX Design</h3>
-                <p>A UX Designer focused on all aspects of a product's development,including design, usability, function, and even branding and marketing. Their work touches the entire end-to-end journey of a user's interaction with a product, and includes identifying new opportunities for the product and business.</p>
+                <p>A UX Designer focused on all aspects of a product's development,including design, usability,
+                    function, and even branding and marketing. Their work touches the entire end-to-end journey of a
+                    user's interaction with a product, and includes identifying new opportunities for the product and
+                    business.</p>
             </div>
             <!--box-4-->
             <div data-aos="zoom-out" data-aos-delay="300" class="services-box">
                 <i class="bx bx-pencil"></i>
                 <h3>Graphic Design</h3>
                 <p>Graphic designers create visual concepts,
-                    using computer software or by hand, to communicate ideas that inspire, inform, and captivate consumers. They develop the overall layout and production design for applications such as advertisements, brochures, magazines, and reports.</p>
+                    using computer software or by hand, to communicate ideas that inspire, inform, and captivate
+                    consumers. They develop the overall layout and production design for applications such as
+                    advertisements, brochures, magazines, and reports.</p>
             </div>
 
         </div>
         </div>
     </section>
-<!--    Projects   -->
+    <!--    Projects   -->
     <section class="projects" id="projects">
-            <div class="heading1">
-                <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">PROJECTS</h2>
-                <h4 style="color: #da2843">CHECK OUT SOME OF MY WORKS.</h4>
+        <div class="heading1">
+            <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">PROJECTS</h2>
+            <h4 style="color: #da2843">CHECK OUT SOME OF MY WORKS.</h4>
 
-            </div>
+        </div>
 
 
         <div class="project-container">
             <div class="project" style="background-image: url(assets/img/project/Hostel.png)">
-            <a href="https://github.com/nethuh/Hostel-Management-System" target="_blank">
-                <div class="project-overlay">
-                    <h3>D24 Hostal</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <i class="fa-brands fa-github"></i>
-                </div>
-            </a>
-        </div>
-        <div class="project" style="background-image: url(assets/img/project/BlueOcean.png)">
-            <a href="" target="_blank">
-                <div class="project-overlay">
-                    <h3>Hotel Management System</h3>
-                    <p>This project is an event management system that allows users to create, view, and manage events.</p>
-                    <i class="fa-brands fa-github"></i>
-                </div>
-            </a>
-        </div>
-        <div class="project" style="background-image: url(assets/img/project/CherryClothing.png)">
-            <a href="https://github.com/nethuh/CherryClothing" target="_blank">
-                <div class="project-overlay">
-                    <h3>Clothing System</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <i class="fa-brands fa-github"></i>
-                </div>
-            </a>
-        </div>
-        <div class="project" style="background-image: url(assets/img/project/CarRet.png)">
-            <a href="https://github.com/nethuh/Easy-Car-Rental" target="_blank">
-                <div class="project-overlay">
-                    <h3>Car Rental System</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <i class="fa-brands fa-github"></i>
-                </div>
-            </a>
-        </div>
+                <a href="https://github.com/nethuh/Hostel-Management-System" target="_blank">
+                    <div class="project-overlay">
+                        <h3>D24 Hostal</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="project" style="background-image: url(assets/img/project/BlueOcean.png)">
+                <a href="" target="_blank">
+                    <div class="project-overlay">
+                        <h3>Hotel Management System</h3>
+                        <p>This project is an event management system that allows users to create, view, and manage
+                            events.</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="project" style="background-image: url(assets/img/project/CherryClothing.png)">
+                <a href="https://github.com/nethuh/CherryClothing" target="_blank">
+                    <div class="project-overlay">
+                        <h3>Clothing System</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="project" style="background-image: url(assets/img/project/CarRet.png)">
+                <a href="https://github.com/nethuh/Easy-Car-Rental" target="_blank">
+                    <div class="project-overlay">
+                        <h3>Car Rental System</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
             <div class="project" style="background-image: url(assets/img/project/Portfolio1.png)">
                 <a href="https://nethuh.github.io/MyPortfolio/" target="_blank">
                     <div class="project-overlay">
@@ -288,12 +302,23 @@
             </div>
         </div>
     </section>
-<section class="contact" id="contact">
-    <div class="heading1">
-        <h2 style="color: white" >CONTACT</h2>
-        <h4 style="color: #da2843">HAVE YOU ANY QUESTIONS?</h4>
-    </div>
-</section>
+    <section class="contact" id="contact">
+        <div class="heading1">
+            <h2 style="color: white">CONTACT</h2>
+            <h4 style="color: #da2843">HAVE YOU ANY QUESTIONS?</h4>
+        </div>
+        <div class="col-container">
+            <div class="col">
+                <input type="text" placeholder="your name"/>
+                <input type="email" placeholder="your email"/>
+                <input type="text" placeholder="your phone"/>
+                <textarea name="" placeholder="write a message" id="" cols="30" rows="10"></textarea>
+                <a href="#" class="btn">send message</a>
+            </div>
+        </div>
+    </section>
+    <!-- contact section ends -->
+
 
 </main>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
