--- a/index.html
+++ b/index.html
@@ -307,6 +307,17 @@
             <h2 style="color: white">CONTACT</h2>
             <h4 style="color: #da2843">HAVE YOU ANY QUESTIONS?</h4>
         </div>
+        <!--contact info item start-->
+        <div class="contact-info-item padd-15">
+            <div class="icon"><i class="fa fa-phone"></i></div>
+            <h4>Call US</h4>
+            <p>0775408818</p>
+        </div>
+        <div class="contact-info-item padd-15">
+            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+            <h4>Office</h4>
+            <p>Galle</p>
+        </div>
         <div class="col-container">
             <div class="col">
                 <input type="text" placeholder="your name"/>
