--- a/index.html
+++ b/index.html
@@ -308,15 +308,25 @@
             <h4 style="color: #da2843">HAVE YOU ANY QUESTIONS?</h4>
         </div>
         <!--contact info item start-->
-        <div class="contact-info-item padd-15">
+        <div class="contact-info">
             <div class="icon"><i class="fa fa-phone"></i></div>
             <h4>Call US</h4>
             <p>0775408818</p>
         </div>
-        <div class="contact-info-item padd-15">
+        <div class="contact-info">
             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
             <h4>Office</h4>
             <p>Galle</p>
+        </div>
+        <div class="contact-info">
+            <div class="icon"><i class="fa fa-envelope"></i></div>
+            <h4>Email</h4>
+            <p>nethmihewage2002@gmail.com</p>
+        </div>
+        <div class="contact-info">
+            <div class="icon"><i class="fa fa-laptop"></i></div>
+            <h4>Github</h4>
+            <p>nethuh</p>
         </div>
         <div class="col-container">
             <div class="col">
