--- a/index.html
+++ b/index.html
@@ -302,12 +302,15 @@
             </div>
         </div>
     </section>
+
+
     <section class="contact" id="contact">
         <div class="heading1">
             <h2 style="color: white">CONTACT</h2>
             <h4 style="color: #da2843">HAVE YOU ANY QUESTIONS?</h4>
         </div>
         <!--contact info item start-->
+        <div class="row">
         <div class="contact-info">
             <div class="icon"><i class="fa fa-phone"></i></div>
             <h4>Call US</h4>
@@ -327,6 +330,7 @@
             <div class="icon"><i class="fa fa-laptop"></i></div>
             <h4>Github</h4>
             <p>nethuh</p>
+        </div>
         </div>
         <div class="col-container">
             <div class="col">
