--- a/index.html
+++ b/index.html
@@ -332,13 +332,44 @@
             <p>nethuh</p>
         </div>
         </div>
-        <div class="col-container">
-            <div class="col">
-                <input type="text" placeholder="your name"/>
-                <input type="email" placeholder="your email"/>
-                <input type="text" placeholder="your phone"/>
-                <textarea name="" placeholder="write a message" id="" cols="30" rows="10"></textarea>
-                <a href="#" class="btn">send message</a>
+        <h3 class="contact-title">SEND ME AN EMAIL</h3>
+        <h4 class="contact-sub-title">I'M VERY RESPONSIVE TO MASSAGE.</h4>
+        <!--Contact Form-->
+        <div class="row">
+            <div class="contact-form">
+                <div class="row">
+                    <div class="form-item col-6 ">
+                        <div class="form-group">
+                            <input class="form-control" placeholder="name" type="text">
+                        </div>
+                    </div>
+                    <div class="form-item col-6">
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Email" type="email">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-item col-12 ">
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Subject" type="text">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-item col-12 ">
+                        <div class="form-group">
+                            <textarea class="form-control" id="" name="" placeholder="Massage"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-item col-12">
+                        <div class="form-group">
+                            <button class="btn" type="submit">Send Massage</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
