--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <h4 style="color: #da2843">HAVE YOU ANY QUESTIONS?</h4>
         </div>
         <!--contact info item start-->
-        <div class="row">
+        <div class="row1">
         <div class="contact-info">
             <div class="icon"><i class="fa fa-phone"></i></div>
             <h4>Call US</h4>
@@ -335,9 +335,9 @@
         <h3 class="contact-title">SEND ME AN EMAIL</h3>
         <h4 class="contact-sub-title">I'M VERY RESPONSIVE TO MASSAGE.</h4>
         <!--Contact Form-->
-        <div class="row">
+        <div class="row1">
             <div class="contact-form">
-                <div class="row">
+                <div class="row1">
                     <div class="form-item col-6 ">
                         <div class="form-group">
                             <input class="form-control" placeholder="name" type="text">
@@ -349,21 +349,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row1">
                     <div class="form-item col-12 ">
                         <div class="form-group">
                             <input class="form-control" placeholder="Subject" type="text">
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row1">
                     <div class="form-item col-12 ">
                         <div class="form-group">
                             <textarea class="form-control" id="" name="" placeholder="Massage"></textarea>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row1">
                     <div class="form-item col-12">
                         <div class="form-group">
                             <button class="btn" type="submit">Send Massage</button>
