--- a/index.html
+++ b/index.html
@@ -306,9 +306,13 @@
 
     <section class="contact" id="contact">
         <div class="heading1">
+
             <h2 style="color: white">CONTACT</h2>
-            <h4 style="color: #da2843">HAVE YOU ANY QUESTIONS?</h4>
+            <div class="title">
+            </div>
         </div>
+        <h4 class="contact-title">HAVE YOU ANY QUESTIONS?</h4>
+        <h4 class="contact-sub-title">I'M YOUR SERVICE</h4>
         <!--contact info item start-->
         <div class="row1">
         <div class="contact-info">
