--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
             <div class="heading">
                 <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">
                     SERVICES</h2>
+                <div class="title">
+                </div>
             </div>
         </div>
         <div class="services-content">
@@ -239,6 +241,8 @@
     <section class="projects" id="projects">
         <div class="heading1">
             <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">PROJECTS</h2>
+            <div class="title">
+            </div>
             <h4 style="color: #da2843">CHECK OUT SOME OF MY WORKS.</h4>
 
         </div>
@@ -315,26 +319,26 @@
         <h4 class="contact-sub-title">I'M YOUR SERVICE</h4>
         <!--contact info item start-->
         <div class="row1">
-        <div class="contact-info">
-            <div class="icon"><i class="fa fa-phone"></i></div>
-            <h4>Call US</h4>
-            <p>0775408818</p>
-        </div>
-        <div class="contact-info">
-            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-            <h4>Office</h4>
-            <p>Galle</p>
-        </div>
-        <div class="contact-info">
-            <div class="icon"><i class="fa fa-envelope"></i></div>
-            <h4>Email</h4>
-            <p>nethmihewage2002@gmail.com</p>
-        </div>
-        <div class="contact-info">
-            <div class="icon"><i class="fa fa-laptop"></i></div>
-            <h4>Github</h4>
-            <p>nethuh</p>
-        </div>
+            <div class="contact-info">
+                <div class="icon"><i class="fa fa-phone"></i></div>
+                <h4>Call US</h4>
+                <p>0775408818</p>
+            </div>
+            <div class="contact-info">
+                <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+                <h4>Office</h4>
+                <p>Galle</p>
+            </div>
+            <div class="contact-info">
+                <div class="icon"><i class="fa fa-envelope"></i></div>
+                <h4>Email</h4>
+                <p>nethmihewage2002@gmail.com</p>
+            </div>
+            <div class="contact-info">
+                <div class="icon"><i class="fa fa-laptop"></i></div>
+                <h4>Github</h4>
+                <p>nethuh</p>
+            </div>
         </div>
         <h3 class="contact-title">SEND ME AN EMAIL</h3>
         <h4 class="contact-sub-title">I'M VERY RESPONSIVE TO MASSAGE.</h4>
