--- a/index.html
+++ b/index.html
@@ -385,6 +385,26 @@
 
 
 </main>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
+                <p>Copyright &copy; 2023 Sayani Personal Profile
+
+                    . Designed by <a rel="nofollow noopener" href="">SayaniNethmi</a></p>
+                <hr>
+                <ul class="social-icon">
+                    <li><a href="#" class="fa fa-facebook"></a></li>
+                    <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-instagram"></a></li>
+                    <li><a href="#" class="fa fa-github"></a></li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 
 <script src="assets/js/main.js"></script>
