--- a/index.html
+++ b/index.html
@@ -388,19 +388,18 @@
 
 <footer>
     <div class="container">
-        <div class="row">
+        <div class="footer">
             <div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
+                <ul class="social-icon">
+                    <li><a href="#" class="fa-brands fa-facebook"></a></li>
+                    <li><a href="#" class="fa-brands fa-twitter"></a></li>
+                    <li><a href="#" class="fa-brands fa-instagram"></a></li>
+                    <li><a href="#" class="fa-brands fa-github"></a></li>
+                </ul>
                 <p>Copyright &copy; 2023 Sayani Personal Profile
 
-                    . Designed by <a rel="nofollow noopener" href="">SayaniNethmi</a></p>
+                    . Designed by <a style="color: #da2843" rel="nofollow noopener" href="">SayaniNethmi</a></p>
                 <hr>
-                <ul class="social-icon">
-                    <li><a href="#" class="fa fa-facebook"></a></li>
-                    <li><a href="#" class="fa fa-twitter"></a></li>
-                    <li><a href="#" class="fa fa-instagram"></a></li>
-                    <li><a href="#" class="fa fa-github"></a></li>
-
-                </ul>
             </div>
         </div>
     </div>
