--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header id="header" class="header">
     <aside>
         <h4>Hello There,</h4>
-        <h1 style="margin-top: -33px">I'm Sayani<span style="color: #da2843"> Nethmi</span></h1>
+        <h2 style="margin-top: -37px; font-family: 'Georgia', sans-serif">I'm Sayani<span style="color: #da2843"> Nethmi</span></h2>
         <h6 style="margin-top: -33px">Full Stack Developer | Designer</h6>
         <!--    <div class="back-arrow-container">-->
         <!--        <a href="#" class="back-arrow">-->
