--- a/index.html
+++ b/index.html
@@ -192,9 +192,8 @@
             <div class="heading">
                 <h2 style="color: white" data-aos="fade-right" data-aos-delay="500" data-aos-duration="300">
                     SERVICES</h2>
-                <div class="title">
-                </div>
             </div>
+            <div class="title1"></div>
         </div>
         <div class="services-content">
             <!--box-1-->
@@ -398,7 +397,7 @@
                 </ul>
                 <p>Copyright &copy; 2023 Sayani Personal Profile
 
-                    . Designed by <a style="color: #da2843" rel="nofollow noopener" href="">SayaniNethmi</a></p>
+                    . Designed by <a style="color: #da2843" rel="nofollow noopener" href="https://github.com/nethuh">SayaniNethmi</a></p>
                 <hr>
             </div>
         </div>
