--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.2/css/boxicons.min.css">
+    <link rel="stylesheet" href="assets/css/responsive.scss">
 
 
     <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
@@ -20,7 +21,8 @@
 <header id="header" class="header">
     <aside>
         <h4>Hello There,</h4>
-        <h2 style="margin-top: -37px; font-family: 'Georgia', sans-serif">I'm Sayani<span style="color: #da2843"> Nethmi</span></h2>
+        <h2 style="margin-top: -37px; font-family: 'Georgia', sans-serif">I'm Sayani<span
+                style="color: #da2843"> Nethmi</span></h2>
         <h6 style="margin-top: -33px">Full Stack Developer | Designer</h6>
         <!--    <div class="back-arrow-container">-->
         <!--        <a href="#" class="back-arrow">-->
@@ -397,7 +399,8 @@
                 </ul>
                 <p>Copyright &copy; 2023 Sayani Personal Profile
 
-                    . Designed by <a style="color: #da2843" rel="nofollow noopener" href="https://github.com/nethuh">SayaniNethmi</a></p>
+                    . Designed by <a style="color: #da2843" rel="nofollow noopener" href="https://github.com/nethuh">SayaniNethmi</a>
+                </p>
                 <hr>
             </div>
         </div>
