--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 </header>
 <nav id="navbar" class="navbar">
     <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="#header">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#projects">Projects</a></li>
         <li><a href="#services">Services</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#certificate">Certificate</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
     <!--    <div>-->
@@ -307,6 +307,15 @@
             </div>
         </div>
     </section>
+
+<!--    <section class="certificate" id="certificate">-->
+<!--        <div class="heading1">-->
+
+<!--            <h2 style="color: white">CERTIFICATES</h2>-->
+<!--            <div class="title">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 
 
     <section class="contact" id="contact">
