--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#certificate">Certificate</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
     <!--    <div>-->
@@ -253,7 +252,7 @@
             <div class="project" style="background-image: url(assets/img/project/Hostel.png)">
                 <a href="https://github.com/nethuh/Hostel-Management-System" target="_blank">
                     <div class="project-overlay">
-                        <h3>D24 Hostal</h3>
+                        <h3>D24 Hostel</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         <i class="fa-brands fa-github"></i>
                     </div>
@@ -301,6 +300,25 @@
                     <div class="project-overlay">
                         <h3>Dark Portfolio</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="project" style="background-image: url(assets/img/project/desktop.png)">
+                <a href="" target="_blank">
+                    <div class="project-overlay">
+                        <h3>Restaurant website</h3>
+                        <p>Grilli is a fully responsive restaurant website,
+                            Responsive for all devices, build using HTML, CSS, and JavaScript.</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="project" style="background-image: url(assets/img/project/Anon.png)">
+                <a href="https://nethuh.github.io/Anon_modern_ecommerce_website/" target="_blank">
+                    <div class="project-overlay">
+                        <h3>E-Commerce Website</h3>
+                        <p>Anon is a fully responsive ecommerce website, maximum compatiblities in all mobile devices, built using HTML, CSS, and JavaScript.</p>
                         <i class="fa-brands fa-github"></i>
                     </div>
                 </a>
